Version 0.25.  New information dialog added and some bug fixes.
git-svn-id: http://chianti.ucsd.edu/svn@21042 0ecc0d97-ab19-0410-9704-bfe1a75892f5